# biblioteka-numeryczna

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: A_daneA_LU.txt  A_daneA_gauss.txt  A_daneB_LU.txt  A_daneB_gauss.txt  A_daneC_LU.txt  A_daneC_gauss.txt  A_daneH.txt  A_daneN.txt  A_dane_LU.txt  A_dane_calkowanie.txt  A_lagrange.txt
include/: aproksymacja.h  calkowanieNumeryczne.h  funkcje.h  interpolacja.h  rownaniaNieliniowe.h  rownaniaRozniczkowe.h  ukladyRownanLiniowych.h  wczytanieDanych.h
src/: aproksymacja.cpp  calkowanieNumeryczne.cpp  funkcje.cpp  interpolacja.cpp  rownaniaNieliniowe.cpp  rownaniaRozniczkowe.cpp  ukladyRownanLiniowych.cpp  wczytanieDanych.cpp
tests/: CMakeLists.txt  test_aproksymacja.cpp  test_calkowanie.cpp  test_interpolacja.cpp  test_rownania_liniowe.cpp  test_rownania_nieliniowe.cpp  test_rownania_rozniczkowe.cpp
